projects-svc/postgres-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects-postgres
  namespace: drone-store
  labels:
    app: projects-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects-postgres
  template:
    metadata:
      labels:
        app: projects-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: projects-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: projects-postgres
  namespace: drone-store
spec:
  selector:
    app: projects-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
